--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   </head>
 
   <body>
+    <nav class="navbar bg-dark">
+      <div class="container">
+        <a class="navbar-brand link-light" href="/">NotAirBnB</a>
+        <%= link_to "Add Flat", new_flat_path, class: "btn btn-outline-light" %>
+      </div>
+    </nav>
     <div class="container my-5">
       <%= yield %>
     </div>
