--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,3 +1,5 @@
+<h1>All Flats (<%= @flats.size %>)</h1>
+
 <div class="d-flex flex-wrap gap-4">
   <% @flats.each do |flat| %>
     <div class="card shadow" style="width: 24rem;">
@@ -9,7 +11,7 @@
           <p><i class="fa-solid fa-user"></i> <%= flat.number_of_guests %></p>
           <p><i class="fa-solid fa-euro-sign"></i> <%= flat.price_per_night %></p>
         </div>
-        <a href="#" class="btn btn-primary">More info</a>
+        <%= link_to "More info", flat, class: "btn btn-primary" %>
       </div>
     </div>
   <% end %>
