--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -4,14 +4,20 @@
   <% @flats.each do |flat| %>
     <div class="card shadow" style="width: 24rem;">
       <img class="card-img-top object-fit-cover" style="width: 24rem; height: 15rem" src="<%= flat.img_url %>" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title"><%= flat.name %></h5>
-        <p class="card-text"><%= flat.address %></p>
+      <div class="card-body d-flex flex-column justify-content-between">
+        <div>
+          <h5 class="card-title"><%= flat.name %></h5>
+          <p class="card-text"><%= flat.address %></p>
+        </div>
         <div class="d-flex gap-3">
           <p><i class="fa-solid fa-user"></i> <%= flat.number_of_guests %></p>
           <p><i class="fa-solid fa-euro-sign"></i> <%= flat.price_per_night %></p>
         </div>
-        <%= link_to "More info", flat, class: "btn btn-primary" %>
+        <div class="d-flex gap-3">
+          <%= link_to "More info", flat, class: "btn btn-outline-primary" %>
+          <%= link_to "Edit", edit_flat_path(flat), class: "btn btn-outline-warning" %>
+          <%= link_to "Delete", flat, class: "btn btn-outline-danger" %>
+        </div>
       </div>
     </div>
   <% end %>
